--- a/index.html
+++ b/index.html
@@ -6,22 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Word Guess Game</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-    <h1>Word Guess Game</h1>
+    <div class="container">
+        <header>
+            <h1>
+                Canada Themed Word Guess Game
+            </h1>
+            <h2>Press any key to begin! </h2>
+        </header>
+        <div id="word"></div>
+        <div id="guesses">Guessed: </div>
+        <div id="wins"> Wins: 0</div>
+        <div id="losses"> Losses: 0</div>
 </body>
-<div class="container">
-    <header>
-        <h1>
-            Canada Themed Word Guess Game
-        </h1>
-    </header>
-    <div id="word"> </div>
-    <div class="Wins"> Wins</div>
-    <div class="Losses"> Losses</div>
-    <script type="text/javascript" src="game.js"> </script>
 
+<script type="text/javascript" src="game.js"> </script>
 
 
 </html>
