--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         </header>
         <div id="word"></div>
         <div id="guesses">Guessed: </div>
+        <div id="mylives">Guesses Left: 0</div>
         <div id="wins"> Wins: 0</div>
         <div id="losses"> Losses: 0</div>
 </body>
